update : delete skill translation add url param language id
